# drone-optics-mcp

./: README.md  pyproject.toml
src/drone_optics_mcp/: __init__.py  __main__.py  server.py
